# claude-code-OAI-proxy

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: publish.yml
monitoring/: docker-compose.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
tests/: test_context_overflow.py  test_haiku.json  test_normalizer.py  test_payload.json  test_sonnet.json  tests.py
